// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout integration test should flow: Changed ActiveMenu to Hosts 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "activeMenu": "Hosts",
        },
        "type": "LAYOUT_CHANGE_ACTIVE",
      },
    ],
  ],
  "state": Object {
    "layout": Object {
      "activeMenu": "Hosts",
      "currentLocation": Object {
        "id": 1,
        "title": "yaml",
      },
      "currentOrganization": Object {
        "id": 2,
        "title": "org2",
      },
      "isCollapsed": false,
      "isLoading": false,
      "items": Array [
        Object {
          "children": Array [
            Object {
              "exact": true,
              "name": "Dashboard",
              "type": "item",
              "url": "/",
            },
            Object {
              "name": "Facts",
              "type": "item",
              "url": "/fact_values",
            },
          ],
          "className": "",
          "icon": "fa fa-tachometer",
          "name": "Monitor",
          "type": "sub_menu",
        },
        Object {
          "children": Array [
            Object {
              "name": "All Hosts",
              "type": "item",
              "url": "/hosts/new",
            },
            Object {
              "name": "Architectures",
              "type": "item",
              "url": "/architectures",
            },
          ],
          "className": "",
          "icon": "fa fa-server",
          "name": "Hosts",
          "type": "sub_menu",
        },
        Object {
          "children": Array [
            Object {
              "name": "Environments",
              "type": "item",
              "url": "/environments",
            },
            Object {
              "name": "Architectures",
              "type": "item",
              "url": "/architectures",
            },
          ],
          "className": "visible-xs-block",
          "icon": "fa fa-wrench",
          "name": "User",
          "type": "sub_menu",
        },
        Object {
          "children": Array [
            Object {
              "name": "Domains",
              "type": "item",
              "url": "/domains",
            },
            Object {
              "name": "Realms",
              "type": "item",
              "url": "/realms",
            },
          ],
          "className": "",
          "icon": "pficon pficon-network",
          "name": "Infrastructure",
          "type": "sub_menu",
        },
        Object {
          "children": Array [
            Object {
              "name": "Any Organization",
              "onClick": [Function],
            },
            Object {
              "name": "org1",
              "onClick": [Function],
              "type": undefined,
            },
            Object {
              "name": "org2",
              "onClick": [Function],
              "type": undefined,
            },
          ],
          "className": "visible-xs-block",
          "icon": "fa fa-building",
          "name": "Organizations",
          "type": "sub_menu",
        },
        Object {
          "children": Array [
            Object {
              "name": "Any Location",
              "onClick": [Function],
            },
            Object {
              "name": "yaml",
              "onClick": [Function],
              "type": undefined,
            },
            Object {
              "name": "london",
              "onClick": [Function],
              "type": undefined,
            },
            Object {
              "name": "norway",
              "onClick": [Function],
              "type": undefined,
            },
          ],
          "className": "visible-xs-block",
          "icon": "fa fa-globe",
          "name": "Locations",
          "type": "sub_menu",
        },
      ],
    },
  },
}
`;

exports[`Layout integration test should flow: Location "yaml" clicked 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "location": Object {
            "id": 1,
            "title": "yaml",
          },
        },
        "type": "LAYOUT_CHANGE_LOCATION",
      },
    ],
  ],
  "state": Object {
    "layout": Object {
      "activeMenu": "Monitor",
      "currentLocation": Object {
        "id": 1,
        "title": "yaml",
      },
      "currentOrganization": Object {
        "id": 1,
        "title": "org1",
      },
      "isCollapsed": false,
      "isLoading": false,
      "items": Array [
        Object {
          "children": Array [
            Object {
              "exact": true,
              "name": "Dashboard",
              "type": "item",
              "url": "/",
            },
            Object {
              "name": "Facts",
              "type": "item",
              "url": "/fact_values",
            },
          ],
          "className": "",
          "icon": "fa fa-tachometer",
          "name": "Monitor",
          "type": "sub_menu",
        },
        Object {
          "children": Array [
            Object {
              "name": "All Hosts",
              "type": "item",
              "url": "/hosts/new",
            },
            Object {
              "name": "Architectures",
              "type": "item",
              "url": "/architectures",
            },
          ],
          "className": "",
          "icon": "fa fa-server",
          "name": "Hosts",
          "type": "sub_menu",
        },
        Object {
          "children": Array [
            Object {
              "name": "Environments",
              "type": "item",
              "url": "/environments",
            },
            Object {
              "name": "Architectures",
              "type": "item",
              "url": "/architectures",
            },
          ],
          "className": "visible-xs-block",
          "icon": "fa fa-wrench",
          "name": "User",
          "type": "sub_menu",
        },
        Object {
          "children": Array [
            Object {
              "name": "Domains",
              "type": "item",
              "url": "/domains",
            },
            Object {
              "name": "Realms",
              "type": "item",
              "url": "/realms",
            },
          ],
          "className": "",
          "icon": "pficon pficon-network",
          "name": "Infrastructure",
          "type": "sub_menu",
        },
        Object {
          "children": Array [
            Object {
              "name": "Any Organization",
              "onClick": [Function],
            },
            Object {
              "name": "org1",
              "onClick": [Function],
              "type": undefined,
            },
            Object {
              "name": "org2",
              "onClick": [Function],
              "type": undefined,
            },
          ],
          "className": "visible-xs-block",
          "icon": "fa fa-building",
          "name": "Organizations",
          "type": "sub_menu",
        },
        Object {
          "children": Array [
            Object {
              "name": "Any Location",
              "onClick": [Function],
            },
            Object {
              "name": "yaml",
              "onClick": [Function],
              "type": undefined,
            },
            Object {
              "name": "london",
              "onClick": [Function],
              "type": undefined,
            },
            Object {
              "name": "norway",
              "onClick": [Function],
              "type": undefined,
            },
          ],
          "className": "visible-xs-block",
          "icon": "fa fa-globe",
          "name": "Locations",
          "type": "sub_menu",
        },
      ],
    },
  },
}
`;

exports[`Layout integration test should flow: Org "org2" clicked 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "organization": Object {
            "id": 2,
            "title": "org2",
          },
        },
        "type": "LAYOUT_CHANGE_ORG",
      },
    ],
  ],
  "state": Object {
    "layout": Object {
      "activeMenu": "Monitor",
      "currentLocation": Object {
        "id": 1,
        "title": "yaml",
      },
      "currentOrganization": Object {
        "id": 2,
        "title": "org2",
      },
      "isCollapsed": false,
      "isLoading": false,
      "items": Array [
        Object {
          "children": Array [
            Object {
              "exact": true,
              "name": "Dashboard",
              "type": "item",
              "url": "/",
            },
            Object {
              "name": "Facts",
              "type": "item",
              "url": "/fact_values",
            },
          ],
          "className": "",
          "icon": "fa fa-tachometer",
          "name": "Monitor",
          "type": "sub_menu",
        },
        Object {
          "children": Array [
            Object {
              "name": "All Hosts",
              "type": "item",
              "url": "/hosts/new",
            },
            Object {
              "name": "Architectures",
              "type": "item",
              "url": "/architectures",
            },
          ],
          "className": "",
          "icon": "fa fa-server",
          "name": "Hosts",
          "type": "sub_menu",
        },
        Object {
          "children": Array [
            Object {
              "name": "Environments",
              "type": "item",
              "url": "/environments",
            },
            Object {
              "name": "Architectures",
              "type": "item",
              "url": "/architectures",
            },
          ],
          "className": "visible-xs-block",
          "icon": "fa fa-wrench",
          "name": "User",
          "type": "sub_menu",
        },
        Object {
          "children": Array [
            Object {
              "name": "Domains",
              "type": "item",
              "url": "/domains",
            },
            Object {
              "name": "Realms",
              "type": "item",
              "url": "/realms",
            },
          ],
          "className": "",
          "icon": "pficon pficon-network",
          "name": "Infrastructure",
          "type": "sub_menu",
        },
        Object {
          "children": Array [
            Object {
              "name": "Any Organization",
              "onClick": [Function],
            },
            Object {
              "name": "org1",
              "onClick": [Function],
              "type": undefined,
            },
            Object {
              "name": "org2",
              "onClick": [Function],
              "type": undefined,
            },
          ],
          "className": "visible-xs-block",
          "icon": "fa fa-building",
          "name": "Organizations",
          "type": "sub_menu",
        },
        Object {
          "children": Array [
            Object {
              "name": "Any Location",
              "onClick": [Function],
            },
            Object {
              "name": "yaml",
              "onClick": [Function],
              "type": undefined,
            },
            Object {
              "name": "london",
              "onClick": [Function],
              "type": undefined,
            },
            Object {
              "name": "norway",
              "onClick": [Function],
              "type": undefined,
            },
          ],
          "className": "visible-xs-block",
          "icon": "fa fa-globe",
          "name": "Locations",
          "type": "sub_menu",
        },
      ],
    },
  },
}
`;

exports[`Layout integration test should flow: initial state 1`] = `
Object {
  "layout": Object {
    "activeMenu": "Monitor",
    "currentLocation": Object {
      "id": 2,
      "title": "london",
    },
    "currentOrganization": Object {
      "id": 1,
      "title": "org1",
    },
    "isCollapsed": false,
    "isLoading": false,
    "items": Array [
      Object {
        "children": Array [
          Object {
            "exact": true,
            "name": "Dashboard",
            "type": "item",
            "url": "/",
          },
          Object {
            "name": "Facts",
            "type": "item",
            "url": "/fact_values",
          },
        ],
        "className": "",
        "icon": "fa fa-tachometer",
        "name": "Monitor",
        "type": "sub_menu",
      },
      Object {
        "children": Array [
          Object {
            "name": "All Hosts",
            "type": "item",
            "url": "/hosts/new",
          },
          Object {
            "name": "Architectures",
            "type": "item",
            "url": "/architectures",
          },
        ],
        "className": "",
        "icon": "fa fa-server",
        "name": "Hosts",
        "type": "sub_menu",
      },
      Object {
        "children": Array [
          Object {
            "name": "Environments",
            "type": "item",
            "url": "/environments",
          },
          Object {
            "name": "Architectures",
            "type": "item",
            "url": "/architectures",
          },
        ],
        "className": "visible-xs-block",
        "icon": "fa fa-wrench",
        "name": "User",
        "type": "sub_menu",
      },
      Object {
        "children": Array [
          Object {
            "name": "Domains",
            "type": "item",
            "url": "/domains",
          },
          Object {
            "name": "Realms",
            "type": "item",
            "url": "/realms",
          },
        ],
        "className": "",
        "icon": "pficon pficon-network",
        "name": "Infrastructure",
        "type": "sub_menu",
      },
      Object {
        "children": Array [
          Object {
            "name": "Any Organization",
            "onClick": [Function],
          },
          Object {
            "name": "org1",
            "onClick": [Function],
            "type": undefined,
          },
          Object {
            "name": "org2",
            "onClick": [Function],
            "type": undefined,
          },
        ],
        "className": "visible-xs-block",
        "icon": "fa fa-building",
        "name": "Organizations",
        "type": "sub_menu",
      },
      Object {
        "children": Array [
          Object {
            "name": "Any Location",
            "onClick": [Function],
          },
          Object {
            "name": "yaml",
            "onClick": [Function],
            "type": undefined,
          },
          Object {
            "name": "london",
            "onClick": [Function],
            "type": undefined,
          },
          Object {
            "name": "norway",
            "onClick": [Function],
            "type": undefined,
          },
        ],
        "className": "visible-xs-block",
        "icon": "fa fa-globe",
        "name": "Locations",
        "type": "sub_menu",
      },
    ],
  },
}
`;
